--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "prisma": "^6.8.2",
     "zod": "^3.25.44"
   },
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "migrate": "npx prisma migrate dev",
